Add files via upload
Massively modernized and cleaned up solutions by Claude Sonnet 4.6.